@@ -190,7 +190,7 @@ use constant PARAM_FROM_MAP => {
                              . 'category c, workflow w,' . TABLE . ' mt ',
      grp_id               => 'member m2, media_member mm2',
      data_text            => 'media_field md',
-     subelement_key_name  => 'media_element mct',
+     subelement_key_name  => 'media_element mct, element_type subet',
      related_story_id     => 'media_element mctrs',
      related_media_id     => 'media_element mctrm',
      contrib_id           => 'media__contributor sic',
@@ -234,7 +234,7 @@ use constant PARAM_WHERE_MAP => {
       unexpired             => '(mt.expire_date IS NULL OR mt.expire_date > CURRENT_TIMESTAMP)',
       desk_id               => 'mt.desk__id = ?',
       name                  => 'LOWER(i.name) LIKE LOWER(?)',
-      subelement_key_name   => 'i.id = mct.object_instance_id AND LOWER(mct.key_name) LIKE LOWER(?)',
+      subelement_key_name    => 'i.id = mct.object_instance_id AND mct.element_type__id = subet.id AND LOWER(subet.key_name) LIKE LOWER(?)',
       related_story_id       => 'i.id = mctrs.object_instance_id AND mctrs.related_story__id = ?',
       related_media_id       => 'i.id = mctrm.object_instance_id AND mctrm.related_media__id = ?',
       data_text             => 'LOWER(md.short_val) LIKE LOWER(?) AND md.object_instance_id = i.id',
