@@ -296,7 +296,7 @@ use constant PARAM_FROM_MAP => {
        contrib_id           => 'story__contributor sic',
        element_key_name     => 'element_type e',
        'story.category'     => 'story__category sc2',
-       subelement_key_name  => 'story_element sct',
+       subelement_key_name  => 'story_element sct, element_type subet',
        related_story_id     => 'story_element sctrs',
        related_media_id     => 'story_element sctrm',
        note                 => 'story_instance si2',
@@ -341,7 +341,7 @@ use constant PARAM_WHERE_MAP => {
       unexpired              => '(s.expire_date IS NULL OR s.expire_date > CURRENT_TIMESTAMP)',
       desk_id                => 's.desk__id = ?',
       name                   => 'LOWER(i.name) LIKE LOWER(?)',
-      subelement_key_name    => 'i.id = sct.object_instance_id AND LOWER(sct.key_name) LIKE LOWER(?)',
+      subelement_key_name    => 'i.id = sct.object_instance_id AND sct.element_type__id = subet.id AND LOWER(subet.key_name) LIKE LOWER(?)',
       related_story_id       => 'i.id = sctrs.object_instance_id AND sctrs.related_story__id = ?',
       related_media_id       => 'i.id = sctrm.object_instance_id AND sctrm.related_media__id = ?',
       data_text              => 'LOWER(sd.short_val) LIKE LOWER(?) AND sd.object_instance_id = i.id',
